--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -482,13 +482,15 @@ input[name="postCtg"]:checked + span, input[name="followUp"]:checked + span{
     width: calc(100% - 110px);
 }
 .label-text input[type="text"], .label-text textarea{
-    width: calc(100% - 60px);
+    width: calc(100% - 65px);
+    padding: 4px 8px;
     border: 1px solid var(--input-border-color);
     border-radius: 3px;
     line-height: 18px;
     min-height: 22px;
     vertical-align: middle;
     font-family: 'IBM Plex Sans KR', sans-serif;
+    box-sizing: border-box;
 }
 .label-text textarea{
     resize: none;
@@ -512,15 +514,9 @@ input[name="postCtg"]:checked + span, input[name="followUp"]:checked + span{
     transition: .3s;
 }
 .input-clear.show{
-    height: 170px;
+    height: 190px;
     opacity: 1;
     overflow: visible;
-}
-.input-clear .label-text.selectbox{
-    display: none;
-}
-.input-clear .label-text.selectbox.on{
-    display: block;
 }
 
 .input-after{
@@ -543,6 +539,81 @@ input[name="postCtg"]:checked + span, input[name="followUp"]:checked + span{
     padding: 10px 10px 8px;
     margin: 0 10px;
     line-height: 1;
+}
+
+/* selectbox */
+.selectbox{
+    width: calc(100% - 65px);
+    position: relative;
+}
+.selectbox .label{
+    padding: 8px 35px 8px 15px;
+    border: 1px solid var(--btn-color-gray);
+    border-radius: 3px;
+    cursor: pointer;
+    position: relative;
+}
+.selectbox .label.active{
+    border-color: var(--main-blue);   
+}
+.selectbox .label span{
+    display: block;
+    font-size: 14px;
+    line-height: 1;
+    color: var(--btn-color-gray-deep);
+}
+.selectbox .label i{
+    position: absolute;
+    top: 50%;
+    right: 16px;
+    transform: translateY(-50%);
+    color: var(--btn-color-gray-deep);
+    transition: .3s;
+}
+.selectbox .label.active i{
+    transform: translateY(-50%) rotate(-180deg);
+}
+.selectbox .select-list{
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    max-height: 200px;
+    overflow-y: auto;
+    background: #fff;
+    border-radius: 5px;
+    opacity: 0;
+    visibility: hidden;
+    transform: scale(0.8);
+    transition: opacity 0.2s ease, visibility 0.2s ease, transform 0.3s cubic-bezier(0.4, 0.6, 0.5, 1.32);
+    z-index: 1;
+    box-sizing: border-box;
+}
+.selectbox .label.active + .select-list{
+    opacity: 1;
+    visibility: visible;
+    border: 1px solid var(--main-border-color-deep);
+    border-top: none;
+    transform: scale(1);
+    transition: opacity 0.3s ease, visibility 0.3s ease, transform 0.3s cubic-bezier(0.4, 0.6, 0.5, 1.32);
+}
+.selectbox .select-list::-webkit-scrollbar{
+    width: 5px;
+    background: var(--main-border-color-deep);
+    border-radius: 5px;
+}
+.selectbox .select-list::-webkit-scrollbar-thumb{
+    background: var(--main-blue-deep);
+    border-radius: 5px;
+}
+.selectbox .select-list .option{
+    padding: 8px 15px;
+    font-size: 14px;
+    border-bottom: 1px dotted var(--main-border-color);
+    cursor: pointer;
+}
+.selectbox .select-list .option:hover{
+    background: var(--main-list-bg);
 }
 
 /* list view */
